--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,13 @@ categories = ["multimedia", "network-programming", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moq-transport = "0.6"
-moq-native = "0.4"
-moq-pub = "0.7"
+moq-transfork = { version = "0.4", path = "../moq-rs/moq-transfork" }
+moq-native = { version = "0.5", path = "../moq-rs/moq-native" }
+moq-karp = { version = "0.5", path = "../moq-rs/moq-karp" }
 
 gst = { package = "gstreamer", version = "0.22" }
 gst-base = { package = "gstreamer-base", version = "0.22" }
 once_cell = "1"
-bytes = "1"
-url = "2"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
 anyhow = { version = "1", features = ["backtrace"] }
