--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,8 @@ categories = ["multimedia", "network-programming", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moq-transfork = { version = "0.4", path = "../moq-rs/moq-transfork" }
-moq-native = { version = "0.5", path = "../moq-rs/moq-native" }
-moq-karp = { version = "0.5", path = "../moq-rs/moq-karp" }
+moq-native = { path = "../moq-rs/moq-native", version = "0.5" }
+moq-karp = { path = "../moq-rs/moq-karp", version = "0.5" }
 
 gst = { package = "gstreamer", version = "0.22" }
 gst-base = { package = "gstreamer-base", version = "0.22" }
@@ -24,6 +23,7 @@ once_cell = "1"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
 anyhow = { version = "1", features = ["backtrace"] }
+bytes = "1"
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8"
