--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ moq-transfork = "0.4"
 moq-native = "0.5"
 moq-karp = "0.7.1"
 
-gst = { package = "gstreamer", version = "0.22" }
-gst-base = { package = "gstreamer-base", version = "0.22" }
+gst = { package = "gstreamer", version = "0.23" }
+gst-base = { package = "gstreamer-base", version = "0.23" }
 once_cell = "1"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
@@ -30,5 +30,5 @@ gst-plugin-version-helper = "0.8"
 
 [lib]
 name = "gstmoq"
-crate-type = ["cdylib","rlib"]
+crate-type = ["cdylib"]
 path = "src/lib.rs"
