--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ categories = ["multimedia", "network-programming", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moq-transfork = "0.4"
-moq-native = "0.5"
-moq-karp = "0.8"
+moq-transfork = "0.6"
+moq-native = "0.5.8"
+moq-karp = "0.10"
 
 gst = { package = "gstreamer", version = "0.23" }
 gst-base = { package = "gstreamer-base", version = "0.23" }
@@ -24,6 +24,8 @@ once_cell = "1"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
 anyhow = { version = "1", features = ["backtrace"] }
+
+url = "2.x"
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8"
