--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "moq-gst"
-description = "Media over QUIC - gstreamer plugin"
+description = "Media over QUIC - Gstreamer plugin"
 authors = ["Luke Curley"]
-repository = "https://github.com/kixelated/moq-gst"
+repository = "https://github.com/kixelated/moq-rs"
 license = "MIT OR Apache-2.0"
 
-version = "0.1.1"
+version = "0.1.7"
 edition = "2021"
 
 keywords = ["quic", "http3", "webtransport", "media", "live"]
@@ -14,9 +14,8 @@ categories = ["multimedia", "network-programming", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moq-transfork = "0.4"
-moq-native = "0.5"
-moq-karp = "0.8"
+moq-native = "0.6"
+moq-karp = "0.13"
 
 gst = { package = "gstreamer", version = "0.23" }
 gst-base = { package = "gstreamer-base", version = "0.23" }
@@ -24,6 +23,7 @@ once_cell = "1"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
 anyhow = { version = "1", features = ["backtrace"] }
+url = "2"
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8"
