--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ moq-karp = "0.14"
 
 gst = { package = "gstreamer", version = "0.23" }
 gst-base = { package = "gstreamer-base", version = "0.23" }
+gst-app = { package = "gstreamer-app", version = "0.23", features = ["v1_20"] }
+
 once_cell = "1"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
